@@ -12,6 +12,9 @@
         to set up a TLS connection.  This was formerly an argument of
         asock.NewTLS().
 
+    * client constructors have a new argument, `timeout`, which sets
+      the number of seconds before read/write operations timeout.
+
   Additions and other changes
 
     * A special-casing of Config.Timeout for test purposes has been
